--- a/energia.html
+++ b/energia.html
@@ -70,9 +70,11 @@
             <div class="container">
                 <h2 class="section-title">Vídeo explicativo – 1 min</h2>
                 <p class="section-subtitle">Com Yohann Duarte</p>
-                <div class="video-placeholder">
-                     <img src="images/video-thumbnail.jpg" alt="Vídeo explicativo sobre o desconto na conta de luz">
+            <div class="video-placeholder">
+                <div style="padding:56.25% 0 0 0;position:relative;">
+                <iframe src="https://player.vimeo.com/video/1107595717?title=0&byline=0&portrait=0&badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" referrerpolicy="strict-origin-when-cross-origin" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Conta de Luz - Valora"></iframe>
                 </div>
+                <script src="https://player.vimeo.com/api/player.js"></script>
             </div>
         </section>
 
